--- a/HTML/residentevil3.html
+++ b/HTML/residentevil3.html
@@ -15,21 +15,18 @@
     <span><a href="../index.html"></a></span>
 
     <div class="Parallax--title">
-        Writing memoirs? Don’t forget the hyphen between Spider and Man. 
+        apocalyptic city 
     </div>
 
 </div>
 <section>
     <div>
         <p class="Section--paragraph">
-            Many years have passed since the titular God of War, Kratos took his vengeance against the Olympian gods.
-            Having survived his final encounter with his father Zeus,
-            Kratos has since travelled to Midgard in Ancient Norway and now lives with his young son Atreus in the world
-            of the Norse gods,
-            a savage land inhabited by many ferocious monsters and warriors.
-            In order to teach his son, whose mother (and Kratos's second wife) has recently died,
-            how to survive in such a world, Kratos must master the rage that has driven him for many years and embrace
-            his newfound role as a father and a mentor.
+            Resident Evil 3 is a 2020 survival horror game developed and published by Capcom. 
+            It is a remake of the 1999 game Resident Evil 3: Nemesis. Players control former elite agent 
+            Jill Valentine and mercenary Carlos Oliveira as they attempt to find a vaccine and escape from a city during a viral outbreak. 
+            The game is played from a third-person perspective and requires the player to solve puzzles and defeat monsters while being pursued by 
+            a creature called Nemesis.
         </p>
         <h1 class="Section--title">Trailer Ahead ↓</h1>        
         <iframe width="1070" height="605" src="https://www.youtube.com/embed/LxDm9T1TKvU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -39,7 +36,7 @@
 
 <div class="parallax2" style="background-image: url(../assets/pics/ResidentEvil3/nemisi2.jpg);">
     <div class="Parallax--title">
-        You do what you think is best
+        It's you or them
     </div>
 
 </div>
@@ -49,19 +46,21 @@
 </section>
 <div class="parallax3" style="background-image: url(../assets/pics/ResidentEvil3/nemisi.jpg);">
     <div class="Parallax--title">
-        It’s all any of us can… even when it hurts like Hell.
+        The One we all FEAR
     </div>
 </div>
 <div>
     <section>
-        <h1 class="Section--title">Keep your expectations low boy, and you'll never be disappointed.</h1>
-        <p class="Section--paragraph"> Atreus: The deuteragonist of the game. The son of Kratos and Faye, Atreus is a
-            young boy who accompanies Kratos on his journey.
-            He is taught how to hunt early in the game and is shown to be impulsive and undisciplined.
-            He has the ability to read runic writings and is more knowledgeable about the world and its inhabitants than
-            Kratos.
-            He is unaware of the god status of Kratos. He is eventually revealed to be also named Loki, the mythological
-            God of Mischief.
+        <h1 class="Section--title">Gameplay</h1>
+        <p class="Section--paragraph"> Resident Evil 3 is a survival horror third-person shooter video game that is played 
+            from an over-the-shoulder, third-person perspective. Although the player controls Resident Evil protagonist Jill Valentine 
+            through most of the game, certain sections require the player to control a supporting character, Carlos Oliveira, for short periods. 
+            The player must explore the environment to open doors, climb up ladders, and pick up items. When an item is collected, 
+            it is stored in an inventory that can be accessed at any time. Items in the inventory can be used, examined, 
+            and combined to solve puzzles and gain access to areas that were previously inaccessible. 
+            The player may also pick up maps to reveal unexplored sections in the game's automap, 
+            which shows the player's current position and indicates if an area still has items to collect. 
+            Cutscenes with occasional quick time events are featured at regular intervals to advance the story.
         </p>
         </p>
     </section>
