--- a/HTML/stronghold.html
+++ b/HTML/stronghold.html
@@ -15,21 +15,16 @@
     <span><a href="../index.html"></a></span>
 
     <div class="Parallax--title">
-        Writing memoirs? Don’t forget the hyphen between Spider and Man. 
+        Conquer The World 
     </div>
 
 </div>
 <section>
     <div>
         <p class="Section--paragraph">
-            Many years have passed since the titular God of War, Kratos took his vengeance against the Olympian gods.
-            Having survived his final encounter with his father Zeus,
-            Kratos has since travelled to Midgard in Ancient Norway and now lives with his young son Atreus in the world
-            of the Norse gods,
-            a savage land inhabited by many ferocious monsters and warriors.
-            In order to teach his son, whose mother (and Kratos's second wife) has recently died,
-            how to survive in such a world, Kratos must master the rage that has driven him for many years and embrace
-            his newfound role as a father and a mentor.
+            Stronghold: Warlords is a real-time strategy game released in March 9, 2021, developed and published by Firefly Studios. 
+            Unlike the previous entries of the Stronghold series, which were focused Europe during the Middle Ages, 
+            Stronghold: Warlords is set in East Asia, with campaigns based on historical events of China, Vietnam, and Japan.
         </p>
         <h1 class="Section--title">Trailer Ahead ↓</h1>        
         <iframe width="1070" height="605" src="https://www.youtube.com/embed/KjLOm-zxwKI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -39,29 +34,29 @@
 
 <div class="parallax2" style="background-image: url(../assets/pics/Stronghold/4k-1Stronghold-Warlords-12-1800x1013.jpg);">
     <div class="Parallax--title">
-        You do what you think is best
+        Your mind is your weapon
     </div>
 
 </div>
 <section>
     <h1 class="Section--title">Here lies our review ↓</h1>        
     <iframe width="1070" height="605" src="https://www.youtube.com/embed/2UtnQNunAkw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1413890356&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/amr-serag-387458266" title="amr Serag" target="_blank" style="color: #cccccc; text-decoration: none;">amr Serag</a> · <a href="https://soundcloud.com/amr-serag-387458266/voice-two-m4a" title="Voice two.m4a" target="_blank" style="color: #cccccc; text-decoration: none;">Voice two.m4a</a></div>
 </section>
 <div class="parallax3" style="background-image: url(../assets/pics/Stronghold/4k-Stronghold-Warlords-17-1800x1013.jpg);">
     <div class="Parallax--title">
-        It’s all any of us can… even when it hurts like Hell.
+        Predict your opponent.
     </div>
 </div>
 <div>
     <section>
-        <h1 class="Section--title">Keep your expectations low boy, and you'll never be disappointed.</h1>
-        <p class="Section--paragraph"> Atreus: The deuteragonist of the game. The son of Kratos and Faye, Atreus is a
-            young boy who accompanies Kratos on his journey.
-            He is taught how to hunt early in the game and is shown to be impulsive and undisciplined.
-            He has the ability to read runic writings and is more knowledgeable about the world and its inhabitants than
-            Kratos.
-            He is unaware of the god status of Kratos. He is eventually revealed to be also named Loki, the mythological
-            God of Mischief.
+        <h1 class="Section--title">Gameplay</h1>
+        <p class="Section--paragraph"> One of the key differences in gameplay compared to the previous games is the introduction of warlords, 
+            8 neutral AI-controlled lords who each have different benefits available after subjugation by either military force or diplomacy. 
+            After coming under the player, the warlords can provide shipments of resources, provide forces, 
+            attack an enemy lord on command or rank up, by expending diplomacy points. Diplomacy points can be accrued over time, 
+            which is sped up by constructing some new buildings introduced in this game. 
+            This is also the first game in the series to have introduced gunpowder.
         </p>
         </p>
     </section>
