--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <span class="card__status">1 day ago</span>
                     </div>
                 </div>
-                <p class="card__description">Earth is ours no more.</p>
+                <p class="card__description">A Virus That Turned Humanity</p>
             </div>
         </a>
     </li>
