--- a/HTML/godOfWar.html
+++ b/HTML/godOfWar.html
@@ -61,6 +61,7 @@
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1414104556%3Fsecret_token%3Ds-oMGgs6TXXag&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/amr-naeim-340629330" title="amr naeim" target="_blank" style="color: #cccccc; text-decoration: none;">amr naeim</a> · <a href="https://soundcloud.com/amr-naeim-340629330/god-of-war-review/s-oMGgs6TXXag" title="God Of War Review" target="_blank" style="color: #cccccc; text-decoration: none;">God Of War Review</a></div>
 
 </section>
 <div class="parallax3" style="background-image: url(../assets/pics/GodofWar/GodOfWar4.jpg);">
