--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 item social">
-                    <a href="#"><i class="icon ion-social-facebook"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100088841453009"><i class="icon ion-social-facebook"></i></a>
                     <a href="https://twitter.com/Planet_GG4"><i class="icon ion-social-twitter"></i></a>
-                    <a href="#"><i class="icon ion-social-instagram"></i></a>
+                    <a href="https://www.instagram.com/invites/contact/?i=szk73flnynix&utm_content=wgf2ty"><i class="icon ion-social-instagram"></i></a>
                     <p class="copyright">Planet.GG © 2022</p>
                 </div>
             </div>
